# doi

./: Cargo.toml  LICENSE  Makefile  README.md  TODO.txt  doi2bib  doi2text  url2bib
src/: bibmagic.py  doi2bib  doi2text  lib.rs  url2bib
