[package]
name = "doi2bib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
itertools = "0.10.5"
reqwest = { version = "0.11", features = ["blocking"] }
thiserror = "1.0.40"
url = "2.3.1"
