[package]
name = "doi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
itertools = "0.10.5"
nutype = { version = "0.2.0", features = ["regex"] }
once_cell = "1.17.1"
ouroboros = "0.15.6"
regex = "1.8.1"
reqwest = { version = "0.11", features = ["blocking"] }
thiserror = "1.0.40"
url = "2.3.1"
