[package]
name = "doi"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
nom-bibtex = "0.4.0"
nutype = { version = "0.2.0", features = ["regex"] }
once_cell = "1.17.1"
regex = "1.8.1"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.3.1"
